add note about nacos docker setup